Initial check-in

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Berklee</title>
   <style>
     body { font-family: Georgia, serif; line-height: 1.5; }
-    #container { margin: 4% auto; padding: 4%; width: 72%; background: #def; }
+    #container { margin: 4% auto; padding: 1% 4%; width: 72%; background: #def; }
+    #container { border-radius: 1em; -webkit-border-radius: 1em; -moz-border-radius: 1em; }
     h1 { margin-bottom: 0; text-align: center; }
     h1 em { font-size: 75%; font-weight: normal; color: inherit; }
     h3 em { font-weight: normal; }
@@ -22,15 +23,11 @@
 <body>
 
   <div id="container">
-    <h1>NBL <em>&ndash; a tiny non-blocking JavaScript lazy loader.</em></h1>
+    <h1>Berklee</h1>
     <p class="center">
-      Homepage: <a href="http://github.com/berklee/nbl/">http://github.com/berklee/nbl/</a><br />
-      Written by Berklee
+      <em>Working on it&hellip;</em>
     </p>
     <hr />
-    <p>
-      Here are some examples that demonstrate how to use NBL in a page.
-    </p>
 
 
   </div>
