Initial check-in

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     h1 em { font-size: 75%; font-weight: normal; color: inherit; }
     h3 em { font-weight: normal; }
     hr { height: 0; border: none; border-bottom: 1px solid #bcd; }
-    em { color: #bcd; }
+/*    em { color: #bcd; }*/
     .pos { color: green !important; }
     .neg { color: red; }
     .hidden { display: none; }
