Makeshift homepage, so embarrassing!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     h1 em { font-size: 75%; font-weight: normal; color: inherit; }
     h3 em { font-weight: normal; }
     hr { height: 0; border: none; border-bottom: 1px solid #bcd; }
-/*    em { color: #bcd; }*/
     .pos { color: green !important; }
     .neg { color: red; }
     .hidden { display: none; }
@@ -23,12 +22,24 @@
 <body>
 
   <div id="container">
-    <h1>Berklee</h1>
-    <p class="center">
-      <em>Working on it&hellip;</em>
-    </p>
+    <h1>Berklee <em>&ndash; web-developer without a <del class="neg">cause</del> homepage&hellip;</em></h1>
     <hr />
 
+    <!-- Current projects -->
+    <div>
+      <h3>Projects</h3>
+      <ul>
+        <li><a href="http://berklee.github.com/nbl/">NBL</a> is a tiny non-blocking JavaScript lazy loader</li>
+      </ul>
+    </div>
+
+    <!-- Contact -->
+    <div>
+      <h3>Contact</h3>
+      <p>
+        Until I have a proper homepage, feel free to follow me on twitter: <a href="http://twitter.com/berklee">twitter.com/berklee</a>
+      </p>
+    </div>
 
   </div>
 
