--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
       </ul>
     </div>
 
-    <!-- Contact -->
-    <div>
-      <h3>Contact</h3>
-      <p>
-        Until I have a proper homepage, feel free to follow me on twitter: <a href="http://twitter.com/berklee">twitter.com/berklee</a>
-      </p>
-    </div>
+    <hr />
+    <p class="center">
+      Github: <a href="http://github.com/berklee/">http://github.com/berklee/</a> &nbsp; &mdash; &nbsp;
+      Twitter: <a href="http://twitter.com/berklee">http://twitter.com/berklee</a>
+    </p>
 
   </div>
 
